--- a/public/index.html
+++ b/public/index.html
@@ -135,9 +135,6 @@
               {{#dogs}}
                 <span class='icon-dogs'>dogs</span>
               {{/dogs}}
-              {{#food}}
-                <span class='icon-food'>food</span>
-              {{/food}}
               {{#indoor}}
                 <span class='icon-indoor'>indoor</span>
               {{/indoor}}
@@ -220,7 +217,7 @@
         <div class = 'divider'></div>
         <section id='adventure_7' class='column' data-adventure=7>
           <!-- <a href= "map.html?routeID=7"> -->
-            <img src = "img/ui/kids.png">
+            <img src = "img/ui/kidscorner.png">
             <h2>Kids Corner</h2>
           <!-- </a> -->
         </section>
