margins for icons

--- a/public/index.html
+++ b/public/index.html
@@ -127,7 +127,7 @@
                 <span class='icon-food'>food available</span>
               {{/food}}
               {{#open_hours}}
-                <span class='icon-open'>open at all times</span>
+                <span class='icon-open'>open 24hrs</span>
               {{/open_hours}}
               {{#views}}
                 <span class='icon-views'>views</span>
