--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,8 @@
       <title>Urban Wander</title>
       <meta name='description' content=''>
 
-      <link href='css/index.less' rel='stylesheet/less' type='text/css' />
+      <!-- <link href='css/index.less' rel='stylesheet/less' type='text/css' /> -->
+      <link href='css/index.css' rel='stylesheet' type='text/css' />
       <script src='js/vendor/less-1.3.3.min.js' type='text/javascript'></script>
 
       <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -25,7 +26,7 @@
       <![endif]-->
       <script src='http://api.tiles.mapbox.com/mapbox.js/v1.0.2/mapbox.js'></script>
       
-      <link href='css/map.less' rel='stylesheet/less' type='text/css' />
+      <!-- <link href='css/map.less' rel='stylesheet/less' type='text/css' /> -->
       <script src='js/vendor/less-1.3.3.min.js' type='text/javascript'></script>
 
       <!-- MailChimp -->
@@ -103,9 +104,9 @@
           <h2>{{route_name}}</h2>
         <!--  <div class='routename'>{{route_name}}</div> -->
         </div>
-        <div class='photo'>
+      <!--  <div class='photo'>
           <img src='{{photo_url}}' alt='{{name}}' onError="this.src='img/popos/no_photo.png';" />
-        </div>
+        </div> -->
         <div class='info'>
           <div class='description'>
             <p>
@@ -184,6 +185,8 @@
         <!-- </a> -->
         </header>
     </section>
+
+    <section id="below-map">
     <section id='adventures' class='container'>
         <h1>click to explore an adventure!</h1>
       <div class='column-box'>
@@ -203,24 +206,17 @@
             <h2>Let's get physical</h2>
           <!-- </a> -->
         </section>
-      <!-- </div> -->
         <div class = 'divider' id="middle-divider"></div>
         <span class='stretch' id='middlestretch'></span>
-        <!-- <div id = 'routes-right'> -->
         <section id='adventure_6' class='column' data-adventure=6>
-          <!-- <a href= "map.html?routeID=6"> -->
             <img src = "img/ui/nature_calls.png">
             <h2>Beautiful Views</h2>
-          <!-- </a> -->
         </section>
         <div class = 'divider'></div>
         <section id='adventure_7' class='column' data-adventure=7>
-          <!-- <a href= "map.html?routeID=7"> -->
             <img src = "img/ui/kidscorner.png">
             <h2>Kids Corner</h2>
-          <!-- </a> -->
         </section>
-      <!-- </div> -->
         <span class='stretch'></span>
       </div>
     </section> 
@@ -228,10 +224,7 @@
     <section id='howto-and-about' class='container'>
       <img class='howto-img' src="img/uw_iphone_info.jpg">
         <div id="about">
-      <!-- <header> -->
-        <!-- <img src="img/ui/about.png" alt="about"> -->
         <h1>About</h1>
-      <!-- </header> -->
       <p>
             For the urban explorer interested in discovering unique, hidden, beautiful public spaces in San Francisco. Get off the beaten track. Discover POPOS (privately owned public open spaces), parklets, stairwells, playgrounds and other local secrets within San Francisco. Take a curated adventure and immerse yourself in art, exercise, nature or play. 
       </p>
@@ -275,7 +268,7 @@
         <span class='stretch'></span>
       </div>
     </section>
-
+</section> <!-- end of below-map section -->
     <footer>
       <p>&copy; 2013 urbanwander.org</p>
     </footer>
@@ -291,9 +284,7 @@
     <script type='text/javascript' src='js/plugins.js'></script>
     <script type='text/javascript' src='js/main.js'></script>
     <script type='text/javascript' src='js/twitterFetcher.js'></script>
-
-        <script src='js/vendor/mustache.js' type='text/javascript'></script>
-
+    <script src='js/vendor/mustache.js' type='text/javascript'></script>
     <script type='text/javascript' src='js/vendor/underscore-min.js'></script>
     <!--<script type='text/javascript' src='js/popos.js'></script> -->
     <script type='text/javascript' src='js/places.js'></script>
