--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 
       <!-- <link href='css/index.less' rel='stylesheet/less' type='text/css' /> -->
       <link href='css/index.css' rel='stylesheet' type='text/css' />
-      <script src='js/vendor/less-1.3.3.min.js' type='text/javascript'></script>
+    <!-- <script src='js/vendor/less-1.3.3.min.js' type='text/javascript'></script> -->
 
       <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
@@ -61,16 +61,16 @@
         </div>
         <ul id='nav'>
           <li><a href = "index.html" id="home-link" class="nav-main">home</a></li>
-          <li><a href = "#adventures" id="adventures-link" class="nav-main">adventures</a>
+          <li><a id="adventures-link" class="nav-main">adventures</a>
             <ul>
-              <li><a href="#" data-adventure=1>POPOS</a></li>
-              <li><a href="#" data-adventure=6>Beautiful views</a></li>
-              <li><a href="#" data-adventure=7>Kids corner</a></li>
-              <li><a href="#" data-adventure=5>Let's Get Physical</a></li>
+              <li><a data-adventure=1>POPOS</a></li>
+              <li><a data-adventure=6>Beautiful views</a></li>
+              <li><a data-adventure=7>Kids corner</a></li>
+              <li><a data-adventure=5>Let's Get Physical</a></li>
             </ul>
           </li>
-          <li><a href = "#news" class="nav-main">news</a></li>
-          <li><a href = "#about" class="nav-main">about</a></li>
+          <li><a class="nav-main" id="news-link">news</a></li>
+          <li><a class="nav-main" id="about-link">about</a></li>
           <li><a href = "mailto:info@urbanwander.org" class="nav-main">contact</a></li>
         </div>
       </section>
@@ -231,7 +231,7 @@
       </p>
     </div>
     </section>
-    <section id='news_and_updates' class='container'>
+    <section id='news-and-updates' class='container'>
       <div class='column-box'>
         <section id='news' class='column'>
           <img src = "img/ui/news.png" alt='news'>
@@ -275,13 +275,14 @@
     </footer>
 
 
-    <script src='//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js'></script>
-    <script>window.jQuery || document.write('<script src=\'js/vendor/jquery-1.9.1.min.js\'><\/script>')</script>
+<!--    <script src='//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js'></script> -->
+  <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+  <script>window.jQuery || document.write('<script src=\'js/vendor/jquery-1.10.2.min.js\'><\/script>')</script>
 
 
     <script src='http://code.jquery.com/ui/1.10.2/jquery-ui.js'></script>
     <!-- remove migrate once plugin code works with jQuery 1.9+ -->
-    <script src="http://code.jquery.com/jquery-migrate-1.2.0.js"></script>
+<!--    <script src="http://code.jquery.com/jquery-migrate-1.2.0.js"></script> -->
     <script type='text/javascript' src='js/plugins.js'></script>
     <script type='text/javascript' src='js/main.js'></script>
     <script type='text/javascript' src='js/twitterFetcher.js'></script>
