using webfonts now

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,9 @@
 
       <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
+      <link href='http://fonts.googleapis.com/css?family=Lato:400,400italic|Open+Sans+Condensed:700' rel='stylesheet' type='text/css'>
+
+
       <link rel='stylesheet' href='css/main.css'>
       <script src='js/vendor/modernizr-2.6.2.min.js'></script>
      
@@ -31,8 +34,6 @@
 
       <!-- MailChimp -->
       <link href="http://cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
-      <link href='http://fonts.googleapis.com/css?family=Didact+Gothic' rel='stylesheet' type='text/css'>
-      <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
       <style type="text/css">
         /*#mc_embed_signup{background: transparent; clear:left; font:14px Helvetica,Arial,sans-serif; }*/
         #mc_embed_signup form {
@@ -61,7 +62,7 @@
         </div>
         <ul id='nav'>
           <li><a href = "index.html" id="home-link" class="nav-main">home</a></li>
-          <li><a id="adventures-link" class="nav-main">adventures</a>
+          <li><a href="#adventures" id="adventures-link" class="nav-main">adventures</a>
             <ul>
               <li><a data-adventure=1>POPOS</a></li>
               <li><a data-adventure=6>Beautiful views</a></li>
@@ -69,8 +70,8 @@
               <li><a data-adventure=5>Let's Get Physical</a></li>
             </ul>
           </li>
-          <li><a class="nav-main" id="news-link">news</a></li>
-          <li><a class="nav-main" id="about-link">about</a></li>
+          <li><a href="#news-and-updates" class="nav-main" id="news-link">news</a></li>
+          <li><a href="#howto-and-about" class="nav-main" id="about-link">about</a></li>
           <li><a href = "mailto:info@urbanwander.org" class="nav-main">contact</a></li>
         </div>
       </section>
