frontend tweaks and change image upload sizes

--- a/public/index.html
+++ b/public/index.html
@@ -66,6 +66,7 @@
             <ul>
               <li><a data-adventure=1>POPOS</a></li>
               <li><a data-adventure=6>Beautiful views</a></li>
+              <p id="navbreak"></p>
               <li><a data-adventure=7>Kids corner</a></li>
               <li><a data-adventure=5>Let's Get Physical</a></li>
             </ul>
