fix safari javascript issue

--- a/public/index.html
+++ b/public/index.html
@@ -182,7 +182,7 @@
       </script>
     </section>
 
-    <section id='map'>
+    <section id='map-section'>
       <img id="daynight" src="img/ui/day_night.png">
     </section>
 
