Frontend view for all places without routes

--- a/public/index.html
+++ b/public/index.html
@@ -69,6 +69,7 @@
               <p id="navbreak"></p>
               <li><a data-adventure=7>Kids corner</a></li>
               <li><a data-adventure=5>Let's Get Physical</a></li>
+              <li><a >All Places</a></li>
             </ul>
           </li>
           <li><a href="#news-and-updates" class="nav-main" id="news-link">news</a></li>
