--- a/public/index.html
+++ b/public/index.html
@@ -105,9 +105,12 @@
         <div class='title'>
         <h3>{{name}}</h3>
         </div>
-        <div class='photo'>
-          <img src='{{photo_url}}' alt='{{name}}' onError="this.src='img/popos/no_photo.png';" />
-        </div>
+        {{#photo_url}}
+          <div class='photo'>
+            <img src='{{photo_url}}' alt='{{name}}' />
+            <!-- <img src='{{photo_url}}' alt='{{name}}' onError="this.src='img/popos/no_photo.png';" /> -->
+          </div>
+        {{/photo_url}}
           <div class='description'>
             <p>
               {{description}}
