--- a/public/index.html
+++ b/public/index.html
@@ -79,11 +79,12 @@
 
     <section id="map-container" class="container" style="display:none">
 
-    <div id='photo_large' style="display:none">
+    <div id='photo-large' style="display:none">
       <div class="title">
         <img src="img/ui/close-x.png" id='close-icon' />
+        <h3 id="photo-title"></h3>
       </div>
-      <img id='large-photo'/>
+      <img class='photo'>
     </div>
 
 
