needs photos button works

--- a/public/index.html
+++ b/public/index.html
@@ -63,11 +63,12 @@
         <ul id='nav'>
           <li><a  id="adventures-link" class="nav-main">adventures</a>
             <ul>
-              <li><a data-adventure=1>POPOS</a></li>
-              <li><a data-adventure=6>Beautiful views</a></li>
-              <li><a data-adventure=7>Kids corner</a></li>
-              <li><a data-adventure=5>Let's Get Physical</a></li>
-              <li><a >All Places</a></li>
+              <li><a data-route=1>POPOS</a></li>
+              <li><a data-route=6>Beautiful views</a></li>
+              <li><a data-route=7>Kids corner</a></li>
+              <li><a data-route=5>Let's Get Physical</a></li>
+              <li><a data-adventure="All Places">All Places</a></li>
+              <li><a data-adventure="Needs Photos">Needs Photos</a></li>
             </ul>
           </li>
           <li><a href="#news-and-updates" class="nav-main" id="news-link">news</a></li>
