--- a/public/index.html
+++ b/public/index.html
@@ -23,11 +23,8 @@
       <script src='js/vendor/modernizr-2.6.2.min.js'></script>
      
           <!-- MAPBOX -->
-      <link href='http://api.tiles.mapbox.com/mapbox.js/v1.0.2/mapbox.css' rel='stylesheet' />
-      <!--[if lte IE 8]>
-        <link href='http://api.tiles.mapbox.com/mapbox.js/v1.0.2/mapbox.ie.css' rel='stylesheet' />
-      <![endif]-->
-      <script src='http://api.tiles.mapbox.com/mapbox.js/v1.0.2/mapbox.js'></script>
+<script src='https://api.tiles.mapbox.com/mapbox.js/v1.6.1/mapbox.js'></script>
+<link href='https://api.tiles.mapbox.com/mapbox.js/v1.6.1/mapbox.css' rel='stylesheet' />
       
       <!-- <link href='css/map.less' rel='stylesheet/less' type='text/css' /> -->
       <script src='js/vendor/less-1.3.3.min.js' type='text/javascript'></script>
