container width, new logo

--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
         <div class = title-div>
           <!-- <h1 class="uw-title">urban wander</h1> -->
           <!-- <h3 class="tagline">discover. explore. wander.</h3> -->
-          <a href = "index.html" id="home-link" class="nav-main"><img src="img/uw_title.png" alt='UrbanWander'></a>
+          <a href = "index.html" id="home-link" class="nav-main"><img src="img/uw_title_key.png" alt='UrbanWander'></a>
         </div>
         <ul id='nav'>
           <li><a  id="adventures-link" class="nav-main">adventures</a>
