--- a/public/index.html
+++ b/public/index.html
@@ -194,7 +194,7 @@
         <h1>click to explore an adventure!</h1>
       <div class='column-box'>
         <!-- <div id='routes-left'> -->
-        <section id='adventure_1' class='column' data-adventure=1>
+        <section id='adventure_1' class='column' data-route=1>
           <!-- <a href= "map.html?routeID=1"> -->
             <img src = "img/ui/popos_icon.png">
             <h2>POPOS
@@ -203,7 +203,7 @@
           <!-- </a> -->
         </section>
         <div class = 'divider'></div>
-        <section id='adventure_5' class='column' data-adventure=5>
+        <section id='adventure_5' class='column' data-route=5>
           <!-- <a href= "map.html?routeID=5"> -->
             <img src = "img/ui/get_physical.png">
             <h2>Let's get physical</h2>
@@ -211,12 +211,12 @@
         </section>
         <div class = 'divider' id="middle-divider"></div>
         <span class='stretch' id='middlestretch'></span>
-        <section id='adventure_6' class='column' data-adventure=6>
+        <section id='adventure_6' class='column' data-route=6>
             <img src = "img/ui/nature_calls.png">
             <h2>Beautiful Views</h2>
         </section>
         <div class = 'divider'></div>
-        <section id='adventure_7' class='column' data-adventure=7>
+        <section id='adventure_7' class='column' data-route=7>
             <img src = "img/ui/kidscorner.png">
             <h2>Kids Corner</h2>
         </section>
