--- a/public/index.html
+++ b/public/index.html
@@ -291,12 +291,14 @@
 
 
 <!--    <script src='//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js'></script> -->
-  <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+<!--   <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
   <script>window.jQuery || document.write('<script src=\'js/vendor/jquery-1.10.2.min.js\'><\/script>')</script>
-
-
-    <script src='http://code.jquery.com/ui/1.10.2/jquery-ui.js'></script>
-
+ -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+<!-- <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css"> -->
+<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+<!--     <script src='http://code.jquery.com/ui/1.10.2/jquery-ui.js'></script>
+ -->
       <script src='js/vendor/jquery.ba-outside-events.min.js' type='text/javascript'></script>
     <!-- remove migrate once plugin code works with jQuery 1.9+ -->
 <!--    <script src="http://code.jquery.com/jquery-migrate-1.2.0.js"></script> -->
