--- a/public/index.html
+++ b/public/index.html
@@ -108,8 +108,7 @@
             </p>
           </div>
           
-        <div class='info'>
-          <div class='buttons'>
+        <div class='info clearfix'>
             <div class='address'>
               {{address}}
               <span class="sub-address">
@@ -147,8 +146,7 @@
               {{#wifi}}
                 <span class='icon-wifi'>wifi</span>
               {{/wifi}}
-            </div>
-          </div>          
+            </div>          
         </div>
     </script>
     </section>
