--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
         <div class = title-div>
           <!-- <h1 class="uw-title">urban wander</h1> -->
           <!-- <h3 class="tagline">discover. explore. wander.</h3> -->
-          <a href = "index.html" id="home-link" class="nav-main"><img src="img/uw_title_key_black.png" alt='UrbanWander'></a>
+          <a href="/" id="home-link" class="nav-main"><h1 class="uw-title">urban wander</h1></a>
         </div>
         <ul id='nav'>
           <li><a  id="adventures-link" class="nav-main">adventures</a>
@@ -275,7 +275,7 @@
       </div>
     </section>
  <!-- end of below-map section -->
-  <p>&copy; 2014 urbanwander.org</p>
+  <p>&copy; 2015 urbanwander.org</p>
 </footer>
 <div id="lightbox" style="display:none;">
   <div id="lightbox-bg"></div>
