--- a/public/index.html
+++ b/public/index.html
@@ -51,12 +51,11 @@
     <!--[if lt IE 7]>
         <p class='chromeframe'>You are using an <strong>outdated</strong> browser. Please <a href='http://browsehappy.com/'>upgrade your browser</a> or <a href='http://www.google.com/chromeframe/?redirect=true'>activate Google Chrome Frame</a> to improve your experience.</p>
     <![endif]-->
+    <div id="loading" style="display:none"><img src="img/ui/loader.gif"></div>
     <a href="#" class="scrollup">Scroll Up</a>
-    <section id='top' class='container'>
+    <section id='top'>
 
         <div class = title-div>
-          <!-- <h1 class="uw-title">urban wander</h1> -->
-          <!-- <h3 class="tagline">discover. explore. wander.</h3> -->
           <a href="/" id="home-link" class="nav-main"><h1 class="uw-title">urban wander</h1></a>
         </div>
         <ul id='nav'>
@@ -70,13 +69,15 @@
               <!-- <li><a data-adventure="Needs Photos">Needs Photos</a></li> -->
             </ul>
           </li>
-          <li><a href="#news-and-updates" class="nav-main" id="news-link">news</a></li>
-          <!-- <li><a href="#howto-and-about" class="nav-main" id="about-link">about</a></li> -->
-          <li><a href = "mailto:info@urbanwander.org" class="nav-main">contact</a></li>
-          </ul>
+<!--           <li><a href="#news-and-updates" class="nav-main" id="news-link">news</a></li>
+          <li><a href="#howto-and-about" class="nav-main" id="about-link">about</a></li>
+          <li><a href = "mailto:info@urbanwander.org" class="nav-main">contact</a></li> -->
+        </ul>
+
       </section>
 
 
+        <div class='top-spacer'></div>
     <section id="map-container" class="container" style="display:none">
  
 
@@ -256,21 +257,9 @@
           <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
         </section>
 
-        <span class='stretch' id='middlestretch2'></span>
+        <!-- <span class='stretch' id='middlestretch2'></span> -->
         
-        <section id='signup' class='column'>
-          <img src = "img/ui/mail.png" alt='keep me updated'>
-          <h2>Keep me updated</h2>
-          <!-- Begin MailChimp Signup Form -->
-          <div id="mc_embed_signup">
-          <form action="http://sfpopos.us7.list-manage.com/subscribe/post?u=8519924cb9130140d935b7dbe&amp;id=8178b2db21" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-            <label for="mce-EMAIL"></label>
-            <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-            <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-          </form>
-          </div>
-          <!--End mc_embed_signup-->
-        </section>   
+  
         <span class='stretch'></span>
       </div>
     </section>
