--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
     <![endif]-->
     <div id="loading" style="display:none"><img src="img/ui/loader.gif"></div>
     <a href="#" class="scrollup">Scroll Up</a>
-    <section id='top' class='clearfix'>
+    <section id='top'>
 
         <div class = title-div>
           <a href="/" id="home-link" class="nav-main"><h1 class="uw-title">urban wander</h1></a>
