adding tests for rails models, fix bug that made open 24hrs icon display incorrectly, tweaking css

--- a/public/index.html
+++ b/public/index.html
@@ -129,9 +129,9 @@
               {{#food}}
                 <span class='icon-food'>food available</span>
               {{/food}}
-              {{#open_hours}}
+              {{#open}}
                 <span class='icon-open'>open 24hrs</span>
-              {{/open_hours}}
+              {{/open}}
               {{#views}}
                 <span class='icon-views'>views</span>
               {{/views}}
