change web address in copyright section

--- a/public/index.html
+++ b/public/index.html
@@ -264,7 +264,7 @@
       </div>
     </section>
  <!-- end of below-map section -->
-  <p>&copy; 2015 urbanwander.org</p>
+  <p>&copy; 2015 urban-wander.com</p>
 </footer>
 <div id="lightbox" style="display:none;">
   <div id="lightbox-bg"></div>
